test/invalid/baseline/typedef-nested.txt
Syntax error at line 14 in typedef-nested.webidl, since `interface Widget`:
    typedef sequence<Point>
    ^ Missing return type
